samples/_failures_safe/1761195581_624ac7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c388def6.c: In function ‘main’:
./samples/SAFE/__tmp_c388def6.c:167:5: error: expected ‘{’ at end of input
  167 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_c388def6.c:167:5: error: expected declaration or statement at end of input
